--- a/style.css
+++ b/style.css
@@ -373,9 +373,10 @@ body {
 .song-card {
     background-color: #ffffff;
     color: #000000;
-     border: 1.3px solid #000000;
+     border: 1.2px solid #000000;
     overflow: hidden;
     transition: transform 0.2s;
+     border-radius: 37px;
 }
 
 .song-card:hover {
@@ -383,7 +384,7 @@ body {
 }
 
 .song-card img {
-    width: 20%;
+    width: 27%;
     display: block;
 }
 
